# spineax

./: CMakeLists.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/spineax/cudss/: baspacho_dense_kernels.cu  baspacho_dense_kernels.h  baspacho_dense_solve.cpp  baspacho_dense_solve.cu  batch_solve.cpp  dense_baspacho_solver.py  single_solve.cpp  single_solve_re.cpp  solver.py  solver_re.py
