[build-system]
requires = [
    "scikit-build-core >= 0.5",
    "nanobind",
    "jax>=0.4.29",
    "nvidia-cudss-cu12; platform_system == 'Linux'",
]
build-backend = "scikit_build_core.build"

[project]
name = "spineax-vajax"
version = "0.0.2"
requires-python = ">=3.10"
authors = [
    {name = "John Viljoen"},
    {name = "ChipFlow"},
]
description = "SParse lINear solvers in JAX (ChipFlow fork)"
dependencies = [
    "jaxtyping",
    "equinox",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.5.0",
    "nvidia-cudss-cu12",
]
cuda13 = [
    "jax[cuda13]>=0.8.0",
    "nvidia-cudss-cu13",
]
dev = [
    "nanobind",
    "ninja",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.scikit-build.sdist]
include = ["src/spineax/**", "CMakeLists.txt", "src/**/*.cpp", "src/**/*.cu"]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
editable.rebuild = true
cmake.build-type = "Release"

[tool.cibuildwheel]
# CUDA-only package: Linux x86_64 and aarch64
build = ["cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "*-win*", "*_i686", "*-macosx_*"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
# BUILD_PBATCH_SOLVE=OFF avoids needing nvcc; only .cpp modules are built
environment = { CMAKE_ARGS = "-DBUILD_PBATCH_SOLVE=OFF -DSPINEAX_USE_BASPACHO=OFF" }

[tool.setuptools.packages.find]
where = [
    "src"
]
